tests/transpiler/x/rs/go_auto.error
rustc: exit status 1
error[E0425]: cannot find value `testpkg` in this scope
 --> /workspace/mochi/tests/transpiler/x/rs/go_auto.rs:3:20
  |
3 |     println!("{}", testpkg.Add(2, 3));
  |                    ^^^^^^^ not found in this scope

error[E0425]: cannot find value `testpkg` in this scope
 --> /workspace/mochi/tests/transpiler/x/rs/go_auto.rs:4:20
  |
4 |     println!("{}", testpkg.Pi);
  |                    ^^^^^^^ not found in this scope

error[E0425]: cannot find value `testpkg` in this scope
 --> /workspace/mochi/tests/transpiler/x/rs/go_auto.rs:5:20
  |
5 |     println!("{}", testpkg.Answer);
  |                    ^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
