tests/transpiler/x/rs/go_auto.rs
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:06 +0700
fn main() {
    println!("{}", testpkg.Add(2, 3));
    println!("{}", testpkg.Pi);
    println!("{}", testpkg.Answer);
}
